# MonkeyTyper-ProjectPJC

./: .gitignore  BestScores.hpp  CMakeLists.txt  bestScores.cpp  bestScores.txt  button.cpp  button.hpp  events.cpp  events.hpp  gameSave.cpp  gameSave.hpp  gameSave.txt  gameStatus.hpp  main.cpp  randomWords.cpp  randomWords.hpp  uiElement.cpp  uiElement.hpp  words.txt
